--- a/layout/try_your_special_offer.scss
+++ b/layout/try_your_special_offer.scss
@@ -68,8 +68,17 @@
       cursor: pointer;
       outline: dashed 2px $or;
     }
+    .text_cards {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      h3 {
+        font-weight: normal;
+      }
+    }
     .prix {
-      font-size: 2.5rem;
+      font-size: 3rem;
+      color: $or;
     }
   }
 }
