--- a/layout/why_choose_us.scss
+++ b/layout/why_choose_us.scss
@@ -51,6 +51,7 @@ main {
     }
     .icon_about_absolute {
       position: absolute;
+      width: 10vw;
       top: 20%;
       right: 20%;
     }
@@ -106,8 +107,12 @@ main {
   }
 }
 
-// @media only screen and(max-width:1760px) {
-// }
+@media only screen and (max-width: 1760px) {
+  main .about_us .contenu_about_us {
+    width: 80%;
+    display: flex;
+  }
+}
 @media only screen and (max-width: 1500px) {
   .why_choose_us {
     .images_top_choose_us {
@@ -124,14 +129,12 @@ main {
           font-size: 2rem;
           margin-top: 100px;
         }
-        .icon_about_absolute {
-          top: 0;
-          left: 50%;
-          transform: translateX(-50%);
-          width: 100px;
-        }
       }
     }
+  }
+  .icon_about_absolute {
+    top: 0;
+    right: 0;
   }
 }
 @media only screen and (max-width: 1200px) {
@@ -168,6 +171,15 @@ main {
       .contenu_about_us {
         flex-direction: column;
         align-items: center;
+      }
+    }
+  }
+  main {
+    .about_us {
+      .contenu_about_us {
+        .text_about_us {
+          align-items: center;
+        }
       }
     }
   }
