--- a/layout/try_your_special_offer.scss
+++ b/layout/try_your_special_offer.scss
@@ -78,3 +78,14 @@
     display: none;
   }
 }
+
+@media only screen and (max-width: 850px) {
+.try_your_special_offer{
+  .contenu_try_your_special_offer{
+    .cards{
+      width: 90%;
+    }
+  }
+
+}
+}
