--- a/layout/header.scss
+++ b/layout/header.scss
@@ -1,6 +1,7 @@
 header {
-    height: 110vh;
+    height: 100vh;
     background: url(img/slider/img_bg_slider_home01.jpg) no-repeat;
+    background-size: cover ;
     .container_header {
       background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)),
                   linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
