--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 header {
-  height: 110vh;
+  height: 100vh;
   background: url(img/slider/img_bg_slider_home01.jpg) no-repeat;
+  background-size: cover;
 }
 header .container_header {
   background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
@@ -126,11 +127,6 @@ header .contenu_header a i {
   padding-left: 10px;
 }
 
-@media only screen and (min-width: 1501px) {
-  header .topnav .topnav_menu {
-    display: flex !important;
-  }
-}
 @media only screen and (max-width: 1500px) {
   header .topnav .icon_hamburger {
     display: block;
