--- a/layout/header.scss
+++ b/layout/header.scss
@@ -137,7 +137,8 @@ header {
         height: 100vh;
         width: 100vw;
         padding: 10%;
-        backdrop-filter: blur(15px);
+        background-color: rgba(0, 0, 0, 0.719);
+        backdrop-filter: blur(7px);
         @include displayCenterColumn;
         position: absolute;
         z-index: 99;
@@ -165,7 +166,7 @@ header {
 @media only screen and (max-width: 750px) {
   header {
     .contenu_header {
-      margin-top: 25%;
+      margin-top: 15%;
       .imgAndtitle {
         width: 400px;
         img {
