--- a/layout/latest-news.scss
+++ b/layout/latest-news.scss
@@ -200,3 +200,16 @@
     gap: 1rem;
   }
 }
+
+@media only screen and (max-width: 450px){
+  .latest-news-title {
+    gap: 0;
+    margin: 3rem 0 2rem 0;
+    h2 {
+      font-size: 2.5rem;
+    }
+    p {
+      font-size: 1.5rem;
+    }
+  }
+}
