--- a/layout/chefs.scss
+++ b/layout/chefs.scss
@@ -1,6 +1,6 @@
 .meet-chefs {
-  position: relative;
   width: 100%;
+  gap: 5rem;
   display: flex;
   flex-direction: column;
   background-color: black;
@@ -12,24 +12,24 @@
   p {
     color: $white;
   }
-  .p-top {
-    position: absolute;
-    color: rgba(255, 255, 255, 0.123);
-    top: 0;
-    left: 3%;
-    font-size: 10vw;
-    letter-spacing: 1rem;
-    z-index: -1;
-  }
 }
 
 .chefs-title {
+  width: 100%;
+  position: relative;
   color: $white;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   text-align: center;
   margin-bottom: 5rem;
+  .p-top {
+    color: rgba(255, 255, 255, 0.123);
+    letter-spacing: 1rem;
+    position: absolute;
+    left: 0;
+    top: -60%;
+    font-size: 11vw;
+  }
   h2 {
     font-weight: 500;
     font-size: 4rem;
@@ -63,12 +63,46 @@
   }
 }
 
+@media (max-width: 1000px) {
+  .chefs-title {
+    .p-top {
+      top: -30%;
+    }
+  }
+}
+
 @media (max-width: 760px) {
+  .chefs-title {
+    h2 {
+      font-size: 2.5rem;
+    }
+    p {
+      font-size: 1.5rem;
+    }
+  }
   .chefs-container {
     row-gap: 4rem;
   }
   .chef-img {
     width: 40%;
+    &:nth-child(2) {
+      box-shadow: none;
+    }
+    &:nth-child(3) {
+      box-shadow: none;
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .chefs-container {
+    flex-wrap: nowrap;
+    flex-direction: column;
+    row-gap: 0;
+    gap: 2rem;
+  }
+  .chef-img {
+    width: 95%;
   }
 }
 
