--- a/layout/latest-news.scss
+++ b/layout/latest-news.scss
@@ -1,28 +1,28 @@
 .latest-news {
-  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 5rem;
   align-items: center;
-  .p-top {
-    position: absolute;
-    color: $creme;
-    top: 0;
-    left: 3%;
-    font-size: 10vw;
-    letter-spacing: 1rem;
-    z-index: -1;
-  }
 }
 
 .latest-news-title {
+  width: 100%;
+  position: relative;
   text-align: center;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
   align-items: center;
   margin: 4rem 0 3rem 0;
+  .p-top {
+    position: absolute;
+    color: $creme;
+    left: 0;
+    top: -60%;
+    font-size: 12vw;
+    letter-spacing: 1rem;
+    z-index: -1;
+  }
   h2 {
     font-weight: 500;
     font-size: 4rem;
@@ -154,6 +154,11 @@
   }
 }
 @media (max-width: 1000px) {
+  .latest-news-title {
+    .p-top {
+      top: -20%;
+    }
+  }
   .latest-news {
     gap: 0;
   }
@@ -183,6 +188,14 @@
   .latest-news-title {
     margin-top: 2;
     gap: 0;
+  }
+  .latest-news-title {
+    h2 {
+      font-size: 2.5rem;
+    }
+    p {
+      font-size: 1.5rem;
+    }
   }
 }
 
