--- a/layout/why_choose_us.scss
+++ b/layout/why_choose_us.scss
@@ -1,7 +1,7 @@
 main {
   .why_choose_us {
     width: 100%;
-    min-height: 200vh;
+
     position: relative;
     .circle_food {
       position: absolute;
@@ -27,11 +27,12 @@ main {
   }
   .about_us {
     position: relative;
-    z-index: -2;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 6rem;
     padding: 13% 0 0% 0%;
+    margin-bottom: 4rem;
     .title_about_us {
       width: 100%;
       text-align: center;
@@ -47,72 +48,70 @@ main {
         font-family: "Kanit", sans-serif;
         font-weight: 400;
       }
-      .icon_about_absolute {
-        position: absolute;
-        top: 0;
-        right: 10%;
-      }
+    }
+    .icon_about_absolute {
+      position: absolute;
+      width: 10vw;
+      top: 20%;
+      right: 20%;
     }
     .about_us_absolute {
       position: absolute;
-      left: 10px;
-      top: 150px;
-      font-size: 13rem;
-      letter-spacing: -7px;
+      left: 2%;
+      top: 10%;
+      font-size: 10vw;
       color: $mediumcreme;
       z-index: -1;
       text-transform: uppercase;
     }
     .contenu_about_us {
-      margin: 7% 22%;
+      width: 45%;
       display: flex;
+      img {
+        display: block;
+        max-height: 600px;
+        max-width: 60%;
+      }
       .text_about_us {
-<<<<<<< HEAD
-        padding: 7%;
-        line-height: 50px;
-=======
         padding: 5%;
         display: flex;
         flex-direction: column;
         align-items: start;
         text-align: justify;
         text-align: center;
->>>>>>> bd12d2df242b39a59d4eb80ad7e7d9acf39959ff
         p {
           font-size: 1.5rem;
+          line-height: 3rem;
           margin-bottom: 60px;
         }
         .btn_about_us {
-<<<<<<< HEAD
-=======
-          font-family: 'Kanit', sans-serif;
+          font-family: "Kanit", sans-serif;
           font-size: 1.1rem;
           word-spacing: 0.3rem;
           font-weight: 500;
           color: $white;
->>>>>>> bd12d2df242b39a59d4eb80ad7e7d9acf39959ff
           background-color: $or;
           padding: 20px 30px;
+          border: none;
           border-radius: 5px;
-<<<<<<< HEAD
-          font-family: "brands";
-          font-weight: 500;
-          color: $white;
-          font-family: "Kanit", sans-serif;
-
-=======
           &:hover {
             cursor: pointer;
             background-color: #dbb975;
             color: $white;
           }
->>>>>>> bd12d2df242b39a59d4eb80ad7e7d9acf39959ff
           i {
             padding-left: 10px;
           }
         }
       }
     }
+  }
+}
+
+@media only screen and (max-width: 1760px) {
+  main .about_us .contenu_about_us {
+    width: 80%;
+    display: flex;
   }
 }
 @media only screen and (max-width: 1500px) {
@@ -131,17 +130,12 @@ main {
           font-size: 2rem;
           margin-top: 100px;
         }
-        .icon_about_absolute {
-          top: 0;
-          left: 50%;
-          transform: translateX(-50%);
-          width: 100px;
-        }
-      }
-      .contenu_about_us {
-        width: 90%;
       }
     }
+  }
+  .icon_about_absolute {
+    top: 0;
+    right: 0;
   }
 }
 @media only screen and (max-width: 1200px) {
@@ -172,75 +166,41 @@ main {
         }
         .icon_about_absolute {
           top: 0;
-          left: 50%;
-          transform: translateX(-50%);
-          width: 100px;
+          right: 0;
         }
       }
       .contenu_about_us {
-        margin: 15% 5%;
         flex-direction: column;
-<<<<<<< HEAD
-        text-align: center;
-=======
         align-items: center;
-        .text_about_us {
-          align-items: center;
       }
     }
   }
+  main {
+    .about_us {
+      .contenu_about_us {
+        .text_about_us {
+          align-items: center;
+        }
+      }
+    }
   }
 }
 
 @media only screen and (max-width: 700px) {
-  main {
-    .why_choose_us {
-      .circle_food{
-        top: -20px;
-        height: 300px;
-        width: 300px;
-      }
-      .images_top_choose_us {
-        height: 550px;
-        gap: 20px;
-        flex-direction: column;
-        display: flex;
-        justify-content: end;
-        align-items: center;
-        padding: 10% 0 0 0;
-          img{
-            width: 200px;
-          }
-      }
-    }
-    .about_us {
-      gap: 6rem;
-      padding: 5% 0 0% 0%;
-      margin-bottom: 3rem;
-      .title_about_us {
-        h2 {
-          font-size: 2.5rem;
-        }
-        p{
-          font-size: 1.2rem;
-        }
-      }
-      .icon_about_absolute {
-        width: 15vw;
-        right: 10%;
-      }
-      .about_us_absolute {
-        font-size: 5vw;
-      }
-      .contenu_about_us {
-        .text_about_us {
-          p {
-            margin-bottom: 50px;
-          }
-        }
->>>>>>> bd12d2df242b39a59d4eb80ad7e7d9acf39959ff
+  .why_choose_us {
+    .images_top_choose_us {
+      img {
+        width: 150px;
       }
     }
   }
 }
-  
+@media only screen and (max-width: 500px) {
+  .why_choose_us {
+    .images_top_choose_us {
+      img {
+        width: 100px;
+      }
+    }
+  }
+}
