--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@ header {
   background-size: cover;
 }
 header .container_header {
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)),
-    linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
   height: 100%;
   width: 100%;
 }
@@ -39,16 +38,16 @@ header .topnav .topnav_menu .nav_links2 {
 }
 header .topnav .topnav_menu .nav_links .home,
 header .topnav .topnav_menu .nav_links2 .home {
-  color: #c8a96a;
+  color: #C8A96A;
 }
 header .topnav .topnav_menu .nav_links li a,
 header .topnav .topnav_menu .nav_links2 li a {
-  color: #ffffff;
+  color: #FFFFFF;
   font-family: "Kanit", sans-serif;
 }
 header .topnav .topnav_menu .nav_links li a:hover,
 header .topnav .topnav_menu .nav_links2 li a:hover {
-  color: #c8a96a;
+  color: #C8A96A;
 }
 header .topnav .topnav_menu .nav_links li a i,
 header .topnav .topnav_menu .nav_links2 li a i {
@@ -60,7 +59,7 @@ header .topnav .topnav_menu .nav_links2 li img {
 }
 header .topnav .topnav_menu .nav_links li .btn_nav,
 header .topnav .topnav_menu .nav_links2 li .btn_nav {
-  background-color: #c8a96a;
+  background-color: #C8A96A;
   padding: 20px 30px;
   border-radius: 5px;
   font-weight: 600;
@@ -68,8 +67,8 @@ header .topnav .topnav_menu .nav_links2 li .btn_nav {
 }
 header .topnav .topnav_menu .nav_links li .btn_nav:hover,
 header .topnav .topnav_menu .nav_links2 li .btn_nav:hover {
-  background-color: #ffffff;
-  color: #c8a96a;
+  background-color: #FFFFFF;
+  color: #C8A96A;
 }
 header .topnav .topnav_menu .nav_links li .btn_nav i,
 header .topnav .topnav_menu .nav_links2 li .btn_nav i {
@@ -227,7 +226,7 @@ header .contenu_header a i {
   }
 }
 .bg_color {
-  background-color: #faf6f0;
+  background-color: #FAF6F0;
 }
 .bg_color .choose_your_best_category {
   width: 100%;
@@ -247,19 +246,20 @@ header .contenu_header a i {
   left: 2%;
   top: 0;
   font-size: 10vw;
-  color: #f5eee3;
+  color: #F5EEE3;
 }
 .bg_color .choose_your_best_category .title_choose_your_category {
   z-index: 1;
   padding: 100px 20px 0 20px;
 }
 .bg_color .choose_your_best_category .title_choose_your_category h2 {
-  margin-bottom: 20px;
-  font-size: 3.5rem;
+  font-size: 60px;
   font-weight: 100;
+  letter-spacing: -2px;
 }
 .bg_color .choose_your_best_category .title_choose_your_category p {
-  font-size: 2rem;
+  font-family: "Kanit", sans-serif;
+  font-weight: 400;
 }
 .bg_color .choose_your_best_category .cards {
   display: flex;
@@ -273,19 +273,19 @@ header .contenu_header a i {
   z-index: 1;
   width: 170px;
   height: 200px;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   color: black;
   font-size: 22px;
 }
 .bg_color .choose_your_best_category .cards .card:hover {
-  background-color: #c8a96a;
+  background-color: #C8A96A;
 }
 .bg_color .choose_your_best_category .cards .card:hover p,
 .bg_color .choose_your_best_category .cards .card:hover i {
-  color: #ffffff;
+  color: #FFFFFF;
 }
 .bg_color .choose_your_best_category .cards .card:hover .icon_choose_category {
-  color: #ffffff;
+  color: #FFFFFF;
 }
 .bg_color .choose_your_best_category .cards .card i {
   padding-top: 9px;
@@ -293,7 +293,7 @@ header .contenu_header a i {
 .bg_color .choose_your_best_category .cards .card .icon_choose_category {
   font-size: 50px;
   padding: 32px 30px 20px 30px;
-  color: #c8a96a;
+  color: #C8A96A;
 }
 
 @media only screen and (max-width: 1400px) {
@@ -302,6 +302,12 @@ header .contenu_header a i {
   }
 }
 @media only screen and (max-width: 450px) {
+  main .bg_color .choose_your_best_category .title_choose_your_category {
+    padding: 100px 30px 0px 30px;
+  }
+  main .bg_color .choose_your_best_category .title_choose_your_category h2 {
+    font-size: 40px;
+  }
   main .bg_color .cards {
     display: flex;
     align-items: center;
@@ -318,7 +324,7 @@ main .why_choose_us .circle_food {
   top: 0;
   transform: translateY(-20%) translateX(-50%);
   border-radius: 50%;
-  border: solid 30px #ffffff;
+  border: solid 30px #FFFFFF;
   width: 40vw;
 }
 main .why_choose_us .images_top_choose_us {
@@ -369,7 +375,7 @@ main .about_us .about_us_absolute {
   left: 2%;
   top: 10%;
   font-size: 10vw;
-  color: #f5eee3;
+  color: #F5EEE3;
   z-index: -1;
   text-transform: uppercase;
 }
@@ -400,8 +406,8 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us {
   font-size: 1.1rem;
   word-spacing: 0.3rem;
   font-weight: 500;
-  color: #ffffff;
-  background-color: #c8a96a;
+  color: #FFFFFF;
+  background-color: #C8A96A;
   padding: 20px 30px;
   border: none;
   border-radius: 5px;
@@ -409,7 +415,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us {
 main .about_us .contenu_about_us .text_about_us .btn_about_us:hover {
   cursor: pointer;
   background-color: #dbb975;
-  color: #ffffff;
+  color: #FFFFFF;
 }
 main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   padding-left: 10px;
@@ -424,6 +430,9 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 @media only screen and (max-width: 1500px) {
   .why_choose_us .images_top_choose_us img {
     width: 230px;
+  }
+  .why_choose_us .about_us .about_us_absolute {
+    font-size: 7rem;
   }
   .why_choose_us .about_us .title_about_us h2 {
     font-size: 2rem;
@@ -443,8 +452,11 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   .why_choose_us .images_top_choose_us img {
     width: 180px;
   }
+  .why_choose_us .about_us .about_us_absolute {
+    font-size: 7rem;
+  }
   .why_choose_us .about_us .title_about_us h2 {
-    font-size: 2rem;
+    font-size: 3rem;
     margin-top: 100px;
   }
   .why_choose_us .about_us .title_about_us .icon_about_absolute {
@@ -503,7 +515,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   position: relative;
   width: 100%;
   min-height: 100vh;
-  background-color: #faf6f0;
+  background-color: #FAF6F0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -538,7 +550,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   font-size: 10vw;
   letter-spacing: 1rem;
   z-index: 1;
-  color: #f5eee3;
+  color: #F5EEE3;
 }
 
 .title_special_offer {
@@ -573,7 +585,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 }
 .contenu_try_your_special_offer .cards:hover {
   cursor: pointer;
-  outline: dashed 2px #c8a96a;
+  outline: dashed 2px #C8A96A;
 }
 .contenu_try_your_special_offer .cards .text_cards {
   display: flex;
@@ -585,7 +597,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 }
 .contenu_try_your_special_offer .cards .prix {
   font-size: 3rem;
-  color: #c8a96a;
+  color: #C8A96A;
 }
 
 @media only screen and (max-width: 1300px) {
@@ -600,30 +612,30 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   }
 }
 .latest-news {
-  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 5rem;
   align-items: center;
 }
-.latest-news .p-top {
-  position: absolute;
-  color: #faf6f0;
-  top: 0;
-  left: 3%;
-  font-size: 10vw;
-  letter-spacing: 1rem;
-  z-index: -1;
-}
 
 .latest-news-title {
+  width: 100%;
+  position: relative;
   text-align: center;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
   align-items: center;
   margin: 4rem 0 3rem 0;
+}
+.latest-news-title .p-top {
+  position: absolute;
+  color: #FAF6F0;
+  left: 0;
+  top: -60%;
+  font-size: 12vw;
+  letter-spacing: 1rem;
+  z-index: -1;
 }
 .latest-news-title h2 {
   font-weight: 500;
@@ -643,7 +655,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 
 .news {
   width: 30%;
-  background-color: #faf6f0;
+  background-color: #FAF6F0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -657,7 +669,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   height: 100%;
 }
 .news button {
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   font-weight: bold;
   font-size: 1rem;
   width: 60%;
@@ -668,8 +680,8 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 }
 .news button:hover {
   cursor: pointer;
-  background-color: #c8a96a;
-  color: #ffffff;
+  background-color: #C8A96A;
+  color: #FFFFFF;
 }
 
 .news-text {
@@ -689,7 +701,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   gap: 1rem;
 }
 .date-user i {
-  color: #c8a96a;
+  color: #C8A96A;
 }
 .date-user p {
   height: auto;
@@ -752,6 +764,9 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   }
 }
 @media (max-width: 1000px) {
+  .latest-news-title .p-top {
+    top: -20%;
+  }
   .latest-news {
     gap: 0;
   }
@@ -781,6 +796,12 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
     margin-top: 2;
     gap: 0;
   }
+  .latest-news-title h2 {
+    font-size: 2.5rem;
+  }
+  .latest-news-title p {
+    font-size: 1.5rem;
+  }
 }
 @media (max-width: 600px) {
   .date-user p {
@@ -807,8 +828,8 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   }
 }
 .meet-chefs {
-  position: relative;
   width: 100%;
+  gap: 5rem;
   display: flex;
   flex-direction: column;
   background-color: black;
@@ -819,25 +840,25 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   padding-bottom: 10rem;
 }
 .meet-chefs p {
-  color: #ffffff;
-}
-.meet-chefs .p-top {
-  position: absolute;
-  color: rgba(255, 255, 255, 0.123);
-  top: 0;
-  left: 3%;
-  font-size: 10vw;
-  letter-spacing: 1rem;
-  z-index: -1;
+  color: #FFFFFF;
 }
 
 .chefs-title {
-  color: #ffffff;
+  width: 100%;
+  position: relative;
+  color: #FFFFFF;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   text-align: center;
   margin-bottom: 5rem;
+}
+.chefs-title .p-top {
+  color: rgba(255, 255, 255, 0.123);
+  letter-spacing: 1rem;
+  position: absolute;
+  left: 0;
+  top: -60%;
+  font-size: 11vw;
 }
 .chefs-title h2 {
   font-weight: 500;
@@ -863,20 +884,46 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   width: 100%;
 }
 .chef-img:nth-child(2) {
-  box-shadow: 5em 10em 10em rgba(255, 255, 255, 0.13),
-    5em -6em 10em rgba(255, 255, 255, 0.13);
+  box-shadow: 5em 10em 10em rgba(255, 255, 255, 0.13), 5em -6em 10em rgba(255, 255, 255, 0.13);
 }
 .chef-img:nth-child(3) {
-  box-shadow: -5em 10em 10em rgba(255, 255, 255, 0.13),
-    -5em -6em 10em rgba(255, 255, 255, 0.178);
+  box-shadow: -5em 10em 10em rgba(255, 255, 255, 0.13), -5em -6em 10em rgba(255, 255, 255, 0.178);
 }
 
+@media (max-width: 1000px) {
+  .chefs-title .p-top {
+    top: -30%;
+  }
+}
 @media (max-width: 760px) {
+  .chefs-title h2 {
+    font-size: 2.5rem;
+  }
+  .chefs-title p {
+    font-size: 1.5rem;
+  }
   .chefs-container {
     row-gap: 4rem;
   }
   .chef-img {
     width: 40%;
+  }
+  .chef-img:nth-child(2) {
+    box-shadow: none;
+  }
+  .chef-img:nth-child(3) {
+    box-shadow: none;
+  }
+}
+@media (max-width: 400px) {
+  .chefs-container {
+    flex-wrap: nowrap;
+    flex-direction: column;
+    row-gap: 0;
+    gap: 2rem;
+  }
+  .chef-img {
+    width: 95%;
   }
 }
 @media only screen and (max-width: 400px) {
@@ -891,7 +938,6 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   }
 }
 .restaurant-photos-container {
-  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -903,7 +949,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 .restaurant-photos-container button {
   font-size: 1rem;
   padding: 1rem 2rem;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   font-weight: bold;
   border: 1px solid rgba(199, 199, 199, 0.452);
   border-radius: 0.3rem;
@@ -912,19 +958,21 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 .restaurant-photos-container button:hover {
   cursor: pointer;
   color: white;
-  background-color: #c8a96a;
+  background-color: #C8A96A;
 }
 .restaurant-photos-container .p-low {
   position: absolute;
-  color: #faf6f0;
-  top: 0;
-  left: 1%;
-  font-size: 11vw;
+  color: #FAF6F0;
+  left: 0;
+  top: -50%;
+  font-size: 15vw;
   z-index: -1;
 }
 
 .restaurant-photos-title {
+  position: relative;
   display: flex;
+  width: 100%;
   flex-direction: column;
   gap: 2rem;
   text-align: center;
@@ -964,6 +1012,12 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
     margin-top: auto;
     row-gap: 0.5rem;
     column-gap: 0.5rem;
+  }
+  .restaurant-photos-title h2 {
+    font-size: 2.5rem;
+  }
+  .restaurant-photos-title p {
+    font-size: 1.5rem;
   }
 }
 @media (max-width: 800px) {
@@ -1073,7 +1127,7 @@ footer {
 }
 .footer-link-input .email-input button:hover {
   cursor: pointer;
-  background-color: #c8a96a;
+  background-color: #C8A96A;
 }
 
 .footer-bottom {
