--- a/layout/try_your_special_offer.scss
+++ b/layout/try_your_special_offer.scss
@@ -71,13 +71,21 @@
     .text_cards {
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      gap: 0.5rem;
       h3 {
         font-weight: normal;
+        font-size: 25px;
+      }
+      p{
+        font-family: 'Kanit', sans-serif;
+        font-weight: 300;
+        font-size: 14px;
+        letter-spacing: -0.5px;
       }
     }
     .prix {
-      font-size: 3rem;
+      font-size: 3.6rem;
+      font-weight: medium;
       color: $or;
     }
   }
@@ -97,6 +105,27 @@
       width: 90%;
     }
   }
-
 }
 }
+@media only screen and (max-width: 530px) {
+  .try_your_special_offer{
+    .title_special_offer{
+      h2{
+        font-size: 2rem;
+      }
+      p{
+        font-size: 1.2rem;
+      }
+    }
+    .contenu_try_your_special_offer{
+      .cards{
+        width: 90%;
+        flex-direction: column;
+        text-align: center;
+        padding: 20px ;
+        }
+      
+    }
+  
+  }
+  }
