--- a/style.css
+++ b/style.css
@@ -467,48 +467,18 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
     flex-direction: column;
     align-items: center;
   }
-  .why_choose_us .about_us .contenu_about_us .text_about_us {
+  main .about_us .contenu_about_us .text_about_us {
     align-items: center;
   }
 }
 @media only screen and (max-width: 700px) {
-  main .why_choose_us .circle_food {
-    top: -20px;
-    height: 300px;
-    width: 300px;
+  .why_choose_us .images_top_choose_us img {
+    width: 150px;
   }
-  main .why_choose_us .images_top_choose_us {
-    height: 550px;
-    gap: 20px;
-    flex-direction: column;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    padding: 10% 0 0 0;
-  }
-  main .why_choose_us .images_top_choose_us img {
-    width: 200px;
-  }
-  main .about_us {
-    gap: 6rem;
-    padding: 5% 0 0% 0%;
-    margin-bottom: 3rem;
-  }
-  main .about_us .title_about_us h2 {
-    font-size: 2.5rem;
-  }
-  main .about_us .title_about_us p {
-    font-size: 1.2rem;
-  }
-  main .about_us .icon_about_absolute {
-    width: 15vw;
-    right: 10%;
-  }
-  main .about_us .about_us_absolute {
-    font-size: 5vw;
-  }
-  main .about_us .contenu_about_us .text_about_us p {
-    margin-bottom: 50px;
+}
+@media only screen and (max-width: 500px) {
+  .why_choose_us .images_top_choose_us img {
+    width: 100px;
   }
 }
 .try_your_special_offer {
@@ -590,13 +560,21 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 .contenu_try_your_special_offer .cards .text_cards {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 .contenu_try_your_special_offer .cards .text_cards h3 {
   font-weight: normal;
+  font-size: 25px;
+}
+.contenu_try_your_special_offer .cards .text_cards p {
+  font-family: "Kanit", sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  letter-spacing: -0.5px;
 }
 .contenu_try_your_special_offer .cards .prix {
-  font-size: 3rem;
+  font-size: 3.6rem;
+  font-weight: medium;
   color: #C8A96A;
 }
 
@@ -609,6 +587,20 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 @media only screen and (max-width: 850px) {
   .try_your_special_offer .contenu_try_your_special_offer .cards {
     width: 90%;
+  }
+}
+@media only screen and (max-width: 530px) {
+  .try_your_special_offer .title_special_offer h2 {
+    font-size: 2rem;
+  }
+  .try_your_special_offer .title_special_offer p {
+    font-size: 1.2rem;
+  }
+  .try_your_special_offer .contenu_try_your_special_offer .cards {
+    width: 90%;
+    flex-direction: column;
+    text-align: center;
+    padding: 20px;
   }
 }
 .latest-news {
