--- a/layout/why_choose_us.scss
+++ b/layout/why_choose_us.scss
@@ -85,7 +85,7 @@ main {
           margin-bottom: 60px;
         }
         .btn_about_us {
-          font-family: "Kanit", sans-serif;
+          font-family: 'Kanit', sans-serif;
           font-size: 1.1rem;
           word-spacing: 0.3rem;
           font-weight: 500;
@@ -143,6 +143,89 @@ main {
     .images_top_choose_us {
       img {
         width: 200px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .why_choose_us {
+    .images_top_choose_us {
+      img {
+        width: 180px;
+      }
+    }
+    .about_us {
+      .about_us_absolute {
+        font-size: 7rem;
+      }
+      .title_about_us {
+        h2 {
+          font-size: 3rem;
+          margin-top: 100px;
+        }
+        .icon_about_absolute {
+          top: 0;
+          right: 0;
+        }
+      }
+      .contenu_about_us {
+        flex-direction: column;
+        align-items: center;
+        .text_about_us {
+          align-items: center;
+      }
+    }
+  }
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  main {
+    .why_choose_us {
+      .circle_food{
+        top: -20px;
+        height: 300px;
+        width: 300px;
+      }
+      .images_top_choose_us {
+        height: 550px;
+        gap: 20px;
+        flex-direction: column;
+        display: flex;
+        justify-content: end;
+        align-items: center;
+        padding: 10% 0 0 0;
+          img{
+            width: 200px;
+          }
+      }
+    }
+    .about_us {
+      gap: 6rem;
+      padding: 5% 0 0% 0%;
+      margin-bottom: 3rem;
+      .title_about_us {
+        h2 {
+          font-size: 2.5rem;
+        }
+        p{
+          font-size: 1.2rem;
+        }
+      }
+      .icon_about_absolute {
+        width: 15vw;
+        right: 10%;
+      }
+      .about_us_absolute {
+        font-size: 5vw;
+      }
+      .contenu_about_us {
+        .text_about_us {
+          p {
+            margin-bottom: 50px;
+          }
+        }
       }
     }
   }
