--- a/style.css
+++ b/style.css
@@ -127,6 +127,11 @@ header .contenu_header a i {
   padding-left: 10px;
 }
 
+@media only screen and (min-width: 1501px) {
+  header .topnav .topnav_menu {
+    display: flex !important;
+  }
+}
 @media only screen and (max-width: 1500px) {
   header .topnav .icon_hamburger {
     display: block;
@@ -467,13 +472,54 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
     flex-direction: column;
     align-items: center;
   }
-  main .about_us .contenu_about_us .text_about_us {
+  .why_choose_us .about_us .contenu_about_us .text_about_us {
     align-items: center;
   }
 }
 @media only screen and (max-width: 700px) {
-  .why_choose_us .images_top_choose_us img {
-    width: 150px;
+  main .why_choose_us .circle_food {
+    top: -20px;
+    height: 300px;
+    width: 300px;
+  }
+  main .why_choose_us .images_top_choose_us {
+    height: 550px;
+    gap: 20px;
+    flex-direction: column;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding: 10% 0 0 0;
+  }
+  main .why_choose_us .images_top_choose_us img {
+    width: 200px;
+  }
+  main .about_us {
+    gap: 6rem;
+    padding: 5% 0 0% 0%;
+    margin-bottom: 3rem;
+  }
+  main .about_us .title_about_us h2 {
+    font-size: 2.5rem;
+  }
+  main .about_us .title_about_us p {
+    font-size: 1.2rem;
+  }
+  main .about_us .icon_about_absolute {
+    width: 15vw;
+    right: 10%;
+  }
+  main .about_us .about_us_absolute {
+    font-size: 5vw;
+  }
+  main .about_us .contenu_about_us .text_about_us p {
+    margin-bottom: 50px;
+  }
+}
+@media only screen and (max-width: 650px) {
+  main .why_choose_us .images_top_choose_us {
+    display: flex;
+    flex-direction: column;
   }
 }
 @media only screen and (max-width: 500px) {
